# volumectl

./: .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  README.md
inc/: alsa_sound_ctx.h  dlg.h  log.h  out.h  sys.h
scripts/: valgrind_run.sh
src/: alsa_sound_ctx.c  dlg.c  main.c  out.c  sys.c
